--- a/News/News/app-modules/Home/View/Cells/HomeTableViewCell.xib
+++ b/News/News/app-modules/Home/View/Cells/HomeTableViewCell.xib
@@ -19,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Fj8-pJ-H3U">
-                        <rect key="frame" x="16" y="0.0" width="288" height="120"/>
+                        <rect key="frame" x="16" y="10" width="288" height="100"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Noq-xu-dlI">
-                                <rect key="frame" x="0.0" y="10" width="100" height="100"/>
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Ot0-Kh-e3P"/>
@@ -36,7 +36,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="gJL-FQ-o0l">
-                                <rect key="frame" x="116" y="40" width="172" height="40.333333333333343"/>
+                                <rect key="frame" x="116" y="30.000000000000004" width="172" height="40.333333333333343"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4w-9I-dPd">
                                         <rect key="frame" x="0.0" y="0.0" width="43.333333333333336" height="20.333333333333332"/>
@@ -45,11 +45,11 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssv-QC-0Y9">
-                                        <rect key="frame" x="0.0" y="20.333333333333336" width="31" height="20"/>
+                                        <rect key="frame" x="0.0" y="20.333333333333336" width="33" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="RAu-CC-1DL"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                         <color key="textColor" systemColor="systemGray2Color"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -61,8 +61,8 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Fj8-pJ-H3U" secondAttribute="trailing" constant="16" id="4rM-eL-HA0"/>
                     <constraint firstItem="Fj8-pJ-H3U" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="IO5-re-ywP"/>
-                    <constraint firstAttribute="bottom" secondItem="Fj8-pJ-H3U" secondAttribute="bottom" id="wf2-1U-bhk"/>
-                    <constraint firstItem="Fj8-pJ-H3U" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="wfB-nR-KMA"/>
+                    <constraint firstAttribute="bottom" secondItem="Fj8-pJ-H3U" secondAttribute="bottom" constant="10" id="wf2-1U-bhk"/>
+                    <constraint firstItem="Fj8-pJ-H3U" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="wfB-nR-KMA"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
